Fix z-index issue on header.sticky

--- a/myapp/static/css/styles.css
+++ b/myapp/static/css/styles.css
@@ -213,6 +213,7 @@ header.sticky {
   top: 0;
   position: sticky;
   padding: 1.5rem 0;
+  z-index: 3;
 }
 
 header.sticky::before {
